# Petaland

./: .gitignore  GAME_DESIGN.md  docker-compose.yml
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
client/public/assets/: PIXEL_ART_STYLE_GUIDE.md
client/src/: config.ts  main.ts  vite-env.d.ts
client/src/__tests__/: ColyseusClient.test.ts  HUD.test.ts  InventoryUI.test.ts  Player.test.ts  WorldMap.test.ts  processEvent.test.ts  types.test.ts
client/src/game/: Camera.ts  EventBus.ts  Player.ts  WorldMap.ts  registry.ts
client/src/network/: ColyseusClient.ts  WalletProvider.ts
client/src/scenes/: BootScene.ts  GameScene.ts  MenuScene.ts
client/src/types/: index.ts
client/src/ui/: ChatPanel.ts  HUD.ts  InventoryUI.ts
nginx/: nginx.conf
programs/: Anchor.toml  Cargo.toml
programs/petaland/: Cargo.toml
programs/petaland/src/: constants.rs  errors.rs  lib.rs
programs/petaland/src/instructions/: buy_item.rs  buy_land.rs  claim_energy.rs  initialize.rs  list_item.rs  mint_petal.rs  mod.rs
programs/petaland/src/state/: land.rs  marketplace.rs  mod.rs  player.rs
server/: Dockerfile  package-lock.json  package.json  tsconfig.json  vitest.config.ts
server/src/: index.ts
server/src/__tests__/: CraftingSystem.test.ts  EnergySystem.test.ts  NPCShop.test.ts  QuestSystem.test.ts  data.test.ts  helpers.ts
server/src/data/: blueprints.ts  items.ts  quests.ts  recipes.ts
server/src/game/: CraftingSystem.ts  EnergySystem.ts  NPCShop.ts  QuestSystem.ts
server/src/rooms/: GameRoom.ts
(+15 files in other folders)
