[package]
name = "petaland"
version = "0.1.0"
description = "Petaland on-chain programs — pixel art farming MMO on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "petaland"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token", "token_2022"] }
mpl-bubblegum = { version = "1.4.0", features = ["cpi"] }
spl-account-compression = { version = "0.3.0", features = ["cpi"] }
spl-noop = { version = "0.2.0" }
